--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "==4.4.1"
+pytest-cov = "==2.7.1"
 twine = "==1.13.0"
 wheel = "==0.33.1"
 
