--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+codecov = "==2.0.15"
 pytest = "==4.4.1"
 pytest-cov = "==2.7.1"
 twine = "==1.13.0"
