--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
 [metadata]
 name=amortization
-version=0.2.0-rc1
-download_url=https://github.com/roniemartinez/amortization/tarball/0.2.0-rc1
+version=0.2.0-rc2
+download_url=https://github.com/roniemartinez/amortization/tarball/0.2.0-rc2
 description=Python library for calculating amortizations and generating amortization schedules
 long_description=file:README.md
 description-file=README.md
+long_description_content_type=text/markdown
 author=Ronie Martinez
 author_email=ronmarti18@gmail.com
 url=https://github.com/roniemartinez/amortization
