--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ deploy:
   user: $TEST_PYPI_USER
   password: $TEST_PYPI_PASS
   server: https://test.pypi.org/legacy/
-  distributions: "sdist bdist_wheel"
+  distributions: "sdist"
   on:
-    branch: staging
+    branch: develop
     condition: $TRAVIS_PYTHON_VERSION = "3.6"
