--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name=amortization
-version=0.3.0-rc1
-download_url=https://github.com/roniemartinez/amortization/tarball/0.3.0-rc1
+version=0.3.0
+download_url=https://github.com/roniemartinez/amortization/tarball/0.3.0
 description=Python library for calculating amortizations and generating amortization schedules
 long_description=file:README.md
 description-file=README.md
