--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ codecov = "==2.0.15"
 pycodestyle = "==2.5.0"
 pytest = "==4.4.1"
 pytest-cov = "==2.8.1"
-twine = "==3.0.0"
+twine = "*"
 
 [packages]
 tabulate = "==0.8.3"
