--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=amortization
-version=1.0.0-rc3
+version=1.0.0
 download_url=https://github.com/roniemartinez/amortization/tarball/1.0.0
 description=Python library for calculating amortizations and generating amortization schedules
 long_description=file:README.md
