--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,4 @@ deploy:
   distributions: "sdist"
   on:
     branch: develop
-    condition: ($TRAVIS_PYTHON_VERSION = "3.6") AND ($TRAVIS_OS_NAME == "linux")
+    condition: $TRAVIS_PYTHON_VERSION = "3.6" && $TRAVIS_OS_NAME == "linux"
