--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,17 @@
 [metadata]
-name=amortization
-version=1.0.0
-download_url=https://github.com/roniemartinez/amortization/tarball/1.0.0
-description=Python library for calculating amortizations and generating amortization schedules
-long_description=file:README.md
-description-file=README.md
-long_description_content_type=text/markdown
-author=Ronie Martinez
-author_email=ronmarti18@gmail.com
-url=https://github.com/roniemartinez/amortization
-license=MIT
-license_files=LICENSE
-classifiers=
+name = amortization
+version = 1.0.0
+download_url = https://github.com/roniemartinez/amortization/tarball/1.0.0
+description = Python library for calculating amortizations and generating amortization schedules
+long_description = file:README.md
+description-file = README.md
+long_description_content_type = text/markdown
+author = Ronie Martinez
+author_email = ronmarti18@gmail.com
+url = https://github.com/roniemartinez/amortization
+license = MIT
+license_files = LICENSE
+classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: MIT License
     Topic :: Office/Business :: Financial :: Accounting
@@ -25,17 +25,17 @@ classifiers=
     Programming Language :: Python :: Implementation :: CPython
 
 [options]
-packages=
+packages =
     amortization
-install_requires=
+install_requires =
     tabulate ~= 0.8.6
 
 [options.entry_points]
-console_scripts=
+console_scripts =
     amortize=amortization.amortize:main
 
 [bdist_wheel]
-universal=1
+universal = 1
 
 [pycodestyle]
 max-line-length = 120
