--- a/.travis.yml
+++ b/.travis.yml
@@ -37,15 +37,15 @@ branches:
     - /^[0-9]+\.[0-9]+\.[0-9]+/
 
 install:
-  - pip3 install pipenv
-  - pipenv install --dev --skip-lock
+  - pip3 install poetry
+  - poetry install
 
 script:
-  - pipenv run pytest --cov=amortization --cov-report=xml -v
-  - pipenv run pycodestyle --verbose
+  - poetry run pytest --cov=amortization --cov-report=xml -v
+  - poetry run pycodestyle --verbose
 
 after_success:
-  - pipenv run codecov
+  - poetry run codecov
 
 deploy:
   provider: pypi
