--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,17 +14,20 @@ branches:
     - /^[0-9]+\.[0-9]+\.[0-9]+/
 
 install:
-  - "%PYTHON%\\Scripts\\pip.exe install poetry"
-  - "%PYTHON%\\Scripts\\poetry.exe install"
+  - choco install make -y
+  - 'set PATH=%PYTHON%\\Scripts;%PATH%'
+  - make install
 
 build: off
 
 cache:
   - '%LOCALAPPDATA%\pip\Cache'
+  - '%LOCALAPPDATA%\pypoetry\cache'
+  - '%PROGRAMDATA%\chocolatey\bin'
+  - '%PROGRAMDATA%\chocolatey\lib'
 
 test_script:
-  - "%PYTHON%\\Scripts\\poetry.exe run pytest --cov=amortization --cov-report=xml -v"
-  - "%PYTHON%\\Scripts\\poetry.exe run pycodestyle --verbose"
+  - make test
 
 on_success:
-  - "%PYTHON%\\Scripts\\poetry.exe run codecov -f coverage.xml"
+  - poetry run codecov -f coverage.xml
