--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "1.0.2"
+version = "1.0.3-alpha.0"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -16,10 +16,10 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.5",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
 
@@ -27,14 +27,14 @@ classifiers = [
 amortize = "amortization.amortize:main"
 
 [tool.poetry.dependencies]
-python = ">=3.5, <4"
+python = ">=3.6, <4"
 tabulate = "^0.8.6"
 
 [tool.poetry.dev-dependencies]
 codecov = "^2.0.16"
-pytest = "^5.3.5"
+pytest = "^6.2.2"
 pytest-cov = "^2.8.1"
-isort = "^4.3.21"
+isort = "^5.7.0"
 flake8 = "^3.7.9"
 bandit = "^1.6.2"
 safety = "^1.8.7"
