--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,9 +5,7 @@ environment:
     - PYTHON: "C:\\Python37"
     - PYTHON: "C:\\Python37-x64"
     - PYTHON: "C:\\Python38"
-    - PYTHON: "C:\\Python38-x64"
-    - PYTHON: "C:\\Python39"
-    - PYTHON: "C:\\Python39-x64"
+#    - PYTHON: "C:\\Python38-x64"  # failing
 
 branches:
   except:
