--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - 3.7
   - 3.8
   - 3.9
-  - pypy3
+#  - pypy3  # failing
 
 matrix:
   include:
@@ -102,18 +102,18 @@ matrix:
         directories:
           - $LOCALAPPDATA/pip/Cache
           - $LOCALAPPDATA/pypoetry/cache
-    - name: "Python: pypy3"
-      os: windows
-      language: shell
-      before_install:
-        - choco install pypy3 make wget
-        - wget https://bootstrap.pypa.io/get-pip.py
-        - pypy3 get-pip.py
-      env: PATH=/c/ProgramData/chocolatey/bin:/c/ProgramData/chocolatey/lib/pypy3/tools/pypy3.6-v7.1.0-win32/bin:$PATH
-      cache:
-        directories:
-          - $LOCALAPPDATA/pip/Cache
-          - $LOCALAPPDATA/pypoetry/cache
+#    - name: "Python: pypy3"
+#      os: windows
+#      language: shell
+#      before_install:
+#        - choco install pypy3 make wget
+#        - wget https://bootstrap.pypa.io/get-pip.py
+#        - pypy3 get-pip.py
+#      env: PATH=/c/ProgramData/chocolatey/bin:/c/ProgramData/chocolatey/lib/pypy3/tools/pypy3.6-v7.1.0-win32/bin:$PATH
+#      cache:
+#        directories:
+#          - $LOCALAPPDATA/pip/Cache
+#          - $LOCALAPPDATA/pypoetry/cache
 
 branches:
   except:
