--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python
 cache:
   - pip: true
   - directories:
-      - $HOME/Library/Caches/pypoetry
       - $HOME/.cache/pypoetry
 
 python:
@@ -11,7 +10,7 @@ python:
   - 3.7
   - 3.8
   - 3.9
-  - pypy3
+#  - pypy3  # failing
 
 matrix:
   include:
@@ -19,22 +18,102 @@ matrix:
       os: osx
       language: shell
       python: 3.6
+      cache:
+        - directories:
+          - $HOME/Library/Caches/pip
+          - $HOME/Library/Caches/pypoetry
     - name: "Python: 3.7"
       os: osx
       language: shell
       python: 3.7
+      cache:
+        - directories:
+          - $HOME/Library/Caches/pip
+          - $HOME/Library/Caches/pypoetry
     - name: "Python: 3.8"
       os: osx
       language: shell
       python: 3.8
+      cache:
+        - directories:
+          - $HOME/Library/Caches/pip
+          - $HOME/Library/Caches/pypoetry
     - name: "Python: 3.9"
       os: osx
       language: shell
       python: 3.9
+      cache:
+        - directories:
+          - $HOME/Library/Caches/pip
+          - $HOME/Library/Caches/pypoetry
     - name: "Python: pypy3"
       os: osx
       language: shell
       python: pypy3
+      cache:
+        - directories:
+          - $HOME/Library/Caches/pip
+          - $HOME/Library/Caches/pypoetry
+    - name: "Python: 3.6"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python --version=3.6.8
+        - choco install make
+        - python -m pip install -U pip setuptools
+      env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
+      cache:
+        directories:
+          - $LOCALAPPDATA/pip/Cache
+          - $LOCALAPPDATA/pypoetry/cache
+    - name: "Python: 3.7"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python --version=3.7.9
+        - choco install make
+        - python -m pip install -U pip setuptools
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
+      cache:
+        directories:
+          - $LOCALAPPDATA/pip/Cache
+          - $LOCALAPPDATA/pypoetry/cache
+    - name: "Python: 3.8"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python --version=3.8.7
+        - choco install make
+        - python -m pip install -U pip setuptools
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      cache:
+        directories:
+          - $LOCALAPPDATA/pip/Cache
+          - $LOCALAPPDATA/pypoetry/cache
+    - name: "Python: 3.9"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python --version=3.9.1
+        - choco install make
+        - python -m pip install -U pip setuptools
+      env: PATH=/c/Python39:/c/Python39/Scripts:$PATH
+      cache:
+        directories:
+          - $LOCALAPPDATA/pip/Cache
+          - $LOCALAPPDATA/pypoetry/cache
+#    - name: "Python: pypy3"
+#      os: windows
+#      language: shell
+#      before_install:
+#        - choco install pypy3 make wget
+#        - wget https://bootstrap.pypa.io/get-pip.py
+#        - pypy3 get-pip.py
+#      env: PATH=/c/ProgramData/chocolatey/bin:/c/ProgramData/chocolatey/lib/pypy3/tools/pypy3.6-v7.1.0-win32/bin:$PATH
+#      cache:
+#        directories:
+#          - $LOCALAPPDATA/pip/Cache
+#          - $LOCALAPPDATA/pypoetry/cache
 
 branches:
   except:
@@ -50,13 +129,21 @@ after_success:
   - poetry run codecov
 
 before_deploy:
+  - poetry config repositories.testpypi https://test.pypi.org/legacy/
+  - poetry config http-basic.testpypi $TEST_PYPI_USER $TEST_PYPI_PASS
   - poetry config http-basic.pypi $PYPI_USER $PYPI_PASS
   - poetry build
 
 deploy:
-  provider: script
-  script: poetry publish
-  skip_cleanup: true
-  on:
-    branch: master
-    condition: $TRAVIS_PYTHON_VERSION = "3.6" && $TRAVIS_OS_NAME == "linux"
+  - provider: script
+    script: poetry publish -r testpypi
+    skip_cleanup: true
+    on:
+      all_branches: true
+      condition: $TRAVIS_BRANCH != "master" && $TRAVIS_PYTHON_VERSION == "3.6" && $TRAVIS_OS_NAME == "linux"
+  - provider: script
+    script: poetry publish
+    skip_cleanup: true
+    on:
+      branch: master
+      condition: $TRAVIS_PYTHON_VERSION == "3.6" && $TRAVIS_OS_NAME == "linux"
