--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "1.0.3"
+version = "1.0.4"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -27,22 +27,54 @@ classifiers = [
 amortize = "amortization.amortize:main"
 
 [tool.poetry.dependencies]
-python = ">=3.6, <4"
+python = ">=3.6.2, <4"
 tabulate = "^0.8.6"
 
 [tool.poetry.dev-dependencies]
+autoflake = "^1.3.1"
 codecov = "^2.0.16"
 pytest = "^6.2.2"
 pytest-cov = "^2.8.1"
 isort = "^5.7.0"
 flake8 = "^3.7.9"
-bandit = "^1.6.2"
-safety = "^1.8.7"
+black = "^21.5b1"
+mypy = "^0.812"
+dephell = "^0.8.3"
 
 [tool.isort]
-line_length = 99
+line_length = 120
 multi_line_output = 3
+force_grid_wrap = 0
+use_parentheses = true
 include_trailing_comma = true
+ensure_newline_before_comments = true
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
+include = '\.pyi?$'
+exclude = '''
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+  | foo.py           # also separately exclude a file named foo.py in
+                     # the root of the project
+)
+'''
+
+[tool.dephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
 
 [build-system]
 requires = ["poetry>=0.12"]
