--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "1.0.4"
+version = "1.0.5-alpha.0"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -20,6 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
 
@@ -32,15 +33,17 @@ tabulate = "^0.8.6"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.3.1"
+black = "^21.10b0"
 codecov = "^2.1.12"
+dephell = "^0.8.3"
+flake8 = "^4.0.1"
+isort = "^5.9.3"
+mypy = "^0.910"
+pyproject-flake8 = "^0.0.1-alpha.2"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
-isort = "^5.9.3"
-flake8 = "^4.0.1"
-black = "^21.10b0"
-mypy = "^0.910"
-dephell = "^0.8.3"
 tomlkit = "0.7.0"  # dephell is broken on versions above 0.7.0
+types-tabulate = "^0.8.3"
 
 [tool.isort]
 line_length = 120
@@ -49,33 +52,41 @@ force_grid_wrap = 0
 use_parentheses = true
 include_trailing_comma = true
 ensure_newline_before_comments = true
+atomic = true
 
 [tool.black]
 line-length = 120
 target-version = ['py39']
 include = '\.pyi?$'
-exclude = '''
-(
-  /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
-    | \.hg
-    | \.mypy_cache
-    | \.tox
-    | \.venv
-    | _build
-    | buck-out
-    | build
-    | dist
-  )/
-  | foo.py           # also separately exclude a file named foo.py in
-                     # the root of the project
-)
-'''
+extend-exclude = """
+# A regex preceded with ^/ will apply only to files and directories
+# in the root of the project.
+^/setup.py
+"""
+
+[tool.mypy]
+disallow_untyped_defs = true
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = [
+    "pkg_resources",
+]
+ignore_missing_imports = true
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = "E203"
+extend-exclude = """
+setup.py,
+"""
+
+[tool.pytest.ini_options]
+addopts = "--cov=amortization --cov-report term-missing --cov-report=xml --cov-report=html -vv"
 
 [tool.dephell.main]
-from = {format = "poetry", path = "pyproject.toml"}
-to = {format = "setuppy", path = "setup.py"}
+from = { format = "poetry", path = "pyproject.toml" }
+to = { format = "setuppy", path = "setup.py" }
 
 [build-system]
 requires = ["poetry>=0.12"]
