--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "1.1.0"
+version = "2.0.0-alpha.0"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -38,6 +38,7 @@ codecov = "^2.1.12"
 dephell = "^0.8.3"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
+mistune = "<2.0.0"  # not compatible with m2r
 mypy = "^0.931"
 pyproject-flake8 = "^0.0.1-alpha.2"
 pytest = "^7.0.0"
@@ -82,7 +83,7 @@ setup.py,
 """
 
 [tool.pytest.ini_options]
-addopts = "--cov=amortization --cov-report term-missing --cov-report=xml --cov-report=html -vv"
+addopts = "--doctest-modules --cov=amortization --cov-report term-missing --cov-report=xml --cov-report=html -vv"
 
 [tool.dephell.main]
 from = { format = "poetry", path = "pyproject.toml" }
