--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions and deploy to TestPyPI/PyPI
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python CI/CD
+name: Python
 
 on:
   push:
