--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "2.0.0"
+version = "2.0.1-alpha.0"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -24,6 +24,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
 ]
 
+[tool.poetry.urls]
+"GitHub Sponsors" = "https://github.com/sponsors/roniemartinez"
+
 [tool.poetry.scripts]
 amortize = "amortization.amortize:main"
 
@@ -36,7 +39,6 @@ autoflake = "^1.3.1"
 black = "^22.1"
 codecov = "^2.1.12"
 dephell = "^0.8.3"
-flake8 = "^4.0.1"
 isort = "^5.10.1"
 mistune = "<2.0.0"  # not compatible with m2r
 mypy = "^0.931"
