--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "2.0.1-alpha.0"
+version = "2.0.1-alpha.1"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -25,7 +25,7 @@ classifiers = [
 ]
 
 [tool.poetry.urls]
-"GitHub Sponsors" = "https://github.com/sponsors/roniemartinez"
+"Donate" = "https://github.com/sponsors/roniemartinez"
 
 [tool.poetry.scripts]
 amortize = "amortization.amortize:main"
