🤖 [skip actions] Ignore mistune in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,4 +10,5 @@ updates:
     schedule:
       interval: "daily"
     ignore:
+      - dependency-name: "mistune"
       - dependency-name: "tomlkit"
