--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "2.0.2"
+version = "2.1.0"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -24,7 +24,7 @@ classifiers = [
 ]
 
 [tool.poetry.urls]
-"Donate" = "https://github.com/sponsors/roniemartinez"
+"Donate" = "https://www.buymeacoffee.com/roniemartinez"
 
 [tool.poetry.scripts]
 amortize = "amortization.amortize:main"
@@ -36,14 +36,11 @@ tabulate = "^0.8.6"
 [tool.poetry.dev-dependencies]
 autoflake = "^1.5.3"
 black = "^22.8"
-dephell = "^0.8.3"
 isort = "^5.10.1"
-mistune = "<2.0.0"  # not compatible with m2r
 mypy = "^0.971"
 pyproject-flake8 = "^0.0.1a5"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
-tomlkit = "0.7.0"  # dephell is broken on versions above 0.7.0
 types-tabulate = "^0.8.11"
 
 [tool.isort]
@@ -93,10 +90,6 @@ addopts = """
     -x \
 """
 
-[tool.dephell.main]
-from = { format = "poetry", path = "pyproject.toml" }
-to = { format = "setuppy", path = "setup.py" }
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
