--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ amortize = "amortization.amortize:main"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-tabulate = ">=0.8.6,<0.10.0"
+tabulate = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.7.8"
