--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amortization"
-version = "2.2.0"
+version = "2.2.1"
 repository = "https://github.com/roniemartinez/amortization"
 description = "Python library for calculating amortizations and generating amortization schedules"
 authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
@@ -32,7 +32,7 @@ amortize = "amortization.amortize:main"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-tabulate = ">=0.8.6,<0.10.0"
+tabulate = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.7.8"
