--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,9 @@
 
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
+
+  # Version updates for Python
+  - package-ecosystem: "pip"
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
